Comming to develop DBconnection
I changed pass from post request to db
only for propose test...